--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@dittolive/ditto": "^4.5.0",
     "react": "18.2.0",
     "react-native": "0.73.0"
   },
